web-dev/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: webdev-nginx-ingress
  namespace: biocomplexity
spec:
  rules:
  - host: webdev.pods.uvarc.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webdev-service
            port:
              number: 8080
  - host: webdev.uvadcos.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webdev-service
            port:
              number: 8080
